Temporarily added screen hider block for mobile devices

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="controls__color jsColor" style="background-color: rgb(0, 60, 255);"></div>
         <div class="controls__color jsColor" style="background-color: #a200ff;"></div>
         <div class="controls__color jsColor" style="background-color: rgb(139, 0, 139);"></div>
+        <div class="controls__color color-picker">
+          <img src="./icons/color-picker.png" alt="Icon" width="40" height="40" >
+        </div>
       </div>
       <!-- /.controls__colors-->
-      <button class="test">
-        <img src="./icons/color-picker.png" alt="Icon" width="30" height="30">
-      </button>
     </div>
     <!-- /.controls-->
     <canvas id="js-canvas" class="canvas"></canvas>
@@ -54,6 +54,7 @@
     <!-- /.controls -->
   </div>
   <!-- /.wrapper -->
+  <div class="not-available">Site is temporarly unavailable on mobile screens :(</div>
   <script src="./app.js"></script>
 </body>
 
