--- a/index.html
+++ b/index.html
@@ -1,61 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paint JS</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paint JS</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-  <div class="wrapper">
-    <div class="controls">
-      <div class="controls__colors" id="js-colors">
-        <div class="controls__color jsColor" style="background-color: black;"></div>
-        <div class="controls__color jsColor" style="background-color: white;"></div>
-        <div class="controls__color jsColor" style="background-color: red;"></div>
-        <div class="controls__color jsColor" style="background-color: orange;"></div>
-        <div class="controls__color jsColor" style="background-color: yellow;"></div>
-        <div class="controls__color jsColor" style="background-color: green;"></div>
-        <div class="controls__color jsColor" style="background-color: #00ffea;"></div>
-        <div class="controls__color jsColor" style="background-color: rgb(65, 165, 253);"></div>
-        <div class="controls__color jsColor" style="background-color: rgb(0, 60, 255);"></div>
-        <div class="controls__color jsColor" style="background-color: #a200ff;"></div>
-        <div class="controls__color jsColor" style="background-color: rgb(139, 0, 139);"></div>
-        <div class="controls__color color-picker">
-          <img src="./icons/color-picker.png" alt="Icon" width="40" height="40" >
+  <body>
+    <div class="wrapper">
+      <div class="controls">
+        <div class="controls__colors" id="js-colors">
+          <div
+            class="controls__color jsColor"
+            style="background-color: black"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: white"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: red"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: orange"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: yellow"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: green"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: #00ffea"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: rgb(65, 165, 253)"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: rgb(0, 60, 255)"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: #a200ff"
+          ></div>
+          <div
+            class="controls__color jsColor"
+            style="background-color: rgb(139, 0, 139)"
+          ></div>
+          <div class="controls__color color-picker">
+            <img
+              src="./icons/color-picker.png"
+              alt="Icon"
+              width="40"
+              height="40"
+            />
+          </div>
         </div>
+        <!-- /.controls__colors-->
       </div>
-      <!-- /.controls__colors-->
+      <!-- /.controls-->
+      <canvas id="js-canvas" class="canvas"></canvas>
+      <div class="controls">
+        <div class="controls__range">
+          <input
+            type="range"
+            id="js-range"
+            min="0.1"
+            max="10.0"
+            value="2.5"
+            step="0.1"
+          />
+        </div>
+        <!-- /.controls__range-->
+        <div class="controls__btns">
+          <span class="divider"></span>
+          <button id="js-line">Line</button>
+          <button id="js-circle">Circle</button>
+          <button id="js-square">Square</button>
+          <button id="js-triangle">Triangle</button>
+          <span class="divider"></span>
+          <button id="js-mode">Fill</button>
+          <button id="js-erase">Erase</button>
+          <button id="js-save">Save</button>
+          <button id="js-download">Download</button>
+        </div>
+        <!-- /.controls__btns-->
+      </div>
+      <!-- /.controls -->
     </div>
-    <!-- /.controls-->
-    <canvas id="js-canvas" class="canvas"></canvas>
-    <div class="controls">
-      <div class="controls__range">
-        <input type="range" id="js-range" min="0.1" max="10.0" value="2.5" step="0.1">
-      </div>
-      <!-- /.controls__range-->
-      <div class="controls__btns">
-        <span class="line"></span>
-        <!--In future -->
-        <button>Circle</button>
-        <button>Square</button>
-        <button>Triangle</button>
-        <!--In future-->
-        <span class="line"></span>
-        <button id="js-mode">Fill</button>
-        <button id="js-erase">Erase</button>
-        <button id="js-save">Save</button>
-      </div>
-      <!-- /.controls__btns-->
+    <!-- /.wrapper -->
+    <div class="not-available">
+      Site is temporarly unavailable on mobile screens :(
     </div>
-    <!-- /.controls -->
-  </div>
-  <!-- /.wrapper -->
-  <div class="not-available">Site is temporarly unavailable on mobile screens :(</div>
-  <script src="./app.js"></script>
-</body>
-
+    <script src="./js/app.js"></script>
+  </body>
 </html>
